@@ -1,5 +1,7 @@
 shady-KISS-skin History
 -------------------------------------------
+2016-01-21:
+- Fixed conditions for neutrinoepg
 
 2016-01-13:
 - Added EPG-images in displaymenudetailrecording
